# arq-dist-tps

./: .gitignore  CMakeLists.txt  README.md
FedeW/: globals.h  main.py  passwd.txt  run_in_all.sh  scp.py
FedeW/ej-1/: Makefile  main.cpp
Mica/: ips.txt  passwd.txt  scp.py
Mica/ej-0/: machinesfile.txt  main.cpp
TP-1/ej-1/: ln_with_threads.cpp  ln_without_threads.cpp
TP-1/ej-2/: main.cpp
TP-1/ej-3/: matrix_without_threads.cpp
TP-1/ej-4/: main.cpp
TP-1/ej1/: ln_with_threads.cpp  main.cpp
TP-1/ej2/: kmp.cpp  main.cpp
TP-1/ej4/: main.cpp  primes_without_threads.cpp
TP-3/ej-0/: main.cpp
TP-3/ej-1/: direccion_IP.cpp  main.cpp
TP-3/ej-2/: direccion_IP.cpp  kmp.cpp  main.cpp
TP-3/ej-3/: main.cpp
TP-3/ej-4/: main.cpp
Trabajo Práctico 1_Del Longo, Micaela/ej1/: ln_with_threads.cpp  ln_without_threads.cpp  main.cpp
Trabajo Práctico 1_Del Longo, Micaela/ej2/: kmp.cpp  main.cpp
Trabajo Práctico 1_Del Longo, Micaela/ej3/: main.cpp  matrix_without_threads.cpp
Trabajo Práctico 1_Del Longo, Micaela/ej4/: main.cpp  primes_without_threads.cpp
Utils/: commands.txt  exec_mpirun.sh  ips.hosts  ips.txt  ips_cp.txt  ips_run.txt  passwd.txt  run_in_all.sh  scp.py
tp1/ej3/: main.cpp  matrix_without_threads.cpp
tp1/ej4/: primes_without_threads.cpp
